# ente

./: .gitignore
infra/ml/: README.md  pyproject.toml
infra/ml/playground/: README.md  pyproject.toml
infra/ml/playground/optimizations/: README.md  optimize_face_models.py  optimize_models.py
infra/ml/playground/optimizations/benchmark_reports/: 20260715_ANDROID_ONNX_RUNTIME_BENCHMARK_REPORT.md  20260716_IOS_RUST_ML_PIPELINE_BENCHMARK_REPORT.md  20260717_ANDROID_WEBGPU_BENCHMARK_REPORT.md  20260722_FINAL_MOBILE_ML_BENCHMARK_REPORT.md  20260723_ANDROID_ML_SCHEDULER_VERIFICATION_REPORT.md
infra/ml/playground/optimizations/models/: model_manifest.json
infra/ml/test/: README.md  run_ml_parity_tests.sh
infra/ml/test/comparator/: __init__.py  compare.py
infra/ml/test/ground_truth/: README.md  __init__.py  _runtime.py  face_alignment.py  face_detection.py  manifest.json  schema.py
infra/ml/test/ml_indexing/: assets.json
infra/ml/test/tests/: test_comparator.py  test_runtime.py
infra/ml/test/tools/: _paths.py  _report_common.py  compare_parity_outputs.py  generate_goldens.py  generate_ml_indexing_golden.py  parity_shell_helpers.py  render_face_detection_overlays.py  render_parity_html_report.py  render_parity_markdown_report.py  visualize_ground_truth_decodes.py
mobile/apps/photos/rust/: Cargo.toml
mobile/apps/photos/rust/src/: frb_generated.rs  lib.rs
mobile/apps/photos/rust/src/api/: image_processing_api.rs  ml_indexing_api.rs  usearch_api.rs
mobile/apps/photos/rust/src/image_processing/: image_compression.rs  mod.rs
mobile/apps/photos/rust/src/ml/: decode.rs  onnx.rs  preprocess.rs  runtime.rs
rust/: Cargo.toml  README.md
rust/.cargo/: audit.toml
rust/apps/cli/: Cargo.toml
rust/apps/cli/src/: auth_flow.rs  lib.rs  live_photo.rs  main.rs
rust/apps/cli/src/api/: client.rs  methods.rs  mod.rs
rust/apps/cli/src/cli/: paste.rs
rust/apps/cli/src/commands/: account.rs  export.rs  paste.rs  sync.rs
rust/apps/cli/src/models/: error.rs
rust/apps/cli/src/sync/: download.rs  engine.rs
rust/apps/cli/tests/: paste.rs  sync.rs
rust/apps/cli/tests/support/: cli.rs
rust/apps/ensu/changes/: android-16-compatibility.md  kv-cache.md  one-folder-per-model.md  remove-unimplemented-sync.md  simplify-local-chat-storage.md  simplify-log-viewers.md  vulkan-gpu-linux.md
rust/apps/ensu/src-tauri/: Cargo.toml  tauri.conf.json
rust/apps/ensu/src-tauri/src/: main.rs
rust/apps/ensu/src-tauri/src/commands/: chat_db.rs  chat_db_migration.rs  crypto.rs  llm.rs  mod.rs
rust/bindings/frb/ente-rust/: Cargo.toml
rust/bindings/uniffi/cast/src/: lib.rs
rust/bindings/uniffi/ensu/: Cargo.toml
rust/bindings/uniffi/ensu/src/: config.rs  db.rs  download.rs  image.rs  lib.rs  llm.rs  model.rs  model_downloader.rs  retrieval.rs  transcription.rs
rust/bindings/wasm/ente-wasm/: Cargo.toml
rust/bindings/wasm/ente-wasm/src/: auth.rs  contacts.rs  crypto.rs  http.rs  lib.rs  space.rs  urls.rs
rust/bindings/wasm/space/: Cargo.toml
rust/bindings/wasm/space/src/: lib.rs  space.rs
rust/core/src/: http.rs
rust/crates/accounts/: Cargo.toml
rust/crates/accounts/src/: client.rs  error.rs  flow.rs  lib.rs  types.rs
rust/crates/accounts/tests/: accounts.rs
rust/crates/contacts/: Cargo.toml
rust/crates/contacts/src/: client.rs  error.rs  lib.rs  models.rs
rust/crates/contacts/src/legacy_kit/: mod.rs
rust/crates/contacts/tests/: contacts.rs  contacts_mock.rs
rust/crates/contacts/tests/support/: auth.rs  contacts.rs  legacy.rs  legacy_kit.rs  mod.rs
rust/crates/core/: Cargo.toml
rust/crates/core/examples/: ping.rs
rust/crates/core/src/: error.rs  http.rs  http_legacy.rs  lib.rs  urls.rs
rust/crates/core/src/auth/: api.rs  types.rs
rust/crates/core/src/crypto/: argon.rs  blob.rs  encoding.rs  error.rs  hash.rs  kdf.rs  mod.rs  sealed.rs  secretbox.rs  stream.rs  types.rs
rust/crates/ensu/: Cargo.toml
rust/crates/ensu/src/: config.rs  download.rs  image.rs  lib.rs  retrieval.rs
rust/crates/ensu/src/config/: knowledge.rs
rust/crates/ensu/src/db/: error.rs  mod.rs  models.rs  traits.rs
rust/crates/ensu/src/llm/: context.rs  download.rs  embed.rs  event.rs  generate.rs  mod.rs  model.rs
rust/crates/ensu/src/model/: migrations.rs  mod.rs
rust/crates/ensu/src/retrieval/: citation.rs  download.rs  footer.rs  index.rs  pack.rs  prompt.rs  reconcile.rs
rust/crates/ensu/src/transcription/: audio.rs  mod.rs  model.rs  transcriber.rs
rust/crates/ensu/tests/: knowledge_real_assets.rs
rust/crates/image/: Cargo.toml
rust/crates/image/src/: color_management.rs  decode.rs  lib.rs  types.rs
rust/crates/model-download/: Cargo.toml
rust/crates/model-download/src/: archive.rs  download.rs  downloader.rs  gguf.rs  lib.rs  model.rs
rust/crates/paste/: Cargo.toml
rust/crates/paste/src/: lib.rs
rust/crates/photos/: Cargo.toml
rust/crates/photos/examples/: ml_goldens.rs
rust/crates/photos/src/ml/: error.rs  events.rs  golden.rs  golden_data.rs  golden_tooling.rs  indexing.rs  mod.rs  onnx.rs  postprocess.rs  preprocess.rs  runtime.rs  types.rs  webgpu.rs
rust/crates/photos/src/motion_photo/: xmp.rs
rust/crates/photos/tests/: ml_goldens.rs  ml_indexing.rs
rust/crates/photos/tests/support/: ml_indexing.rs  mod.rs
rust/crates/test-support/: Cargo.toml  README.md
rust/crates/test-support/src/: lib.rs  museum.rs  object_store.rs  server.rs
rust/e2e/: Cargo.toml  README.md
rust/e2e/tests/: full_e2e.rs  space_e2e.rs  wall_e2e.rs
rust/e2e/tests/space_e2e/: mod.rs
rust/e2e/tests/support/: auth.rs  contacts.rs  legacy.rs  mod.rs  space.rs  wall.rs
rust/space/: Cargo.toml
rust/space/src/: client.rs  crypto.rs  error.rs  http.rs  lib.rs  models.rs  transport.rs
rust/space/src/client/: assets.rs  entity_keys.rs  friends.rs  keys.rs  link_ctx.rs  links.rs  media.rs  messages.rs  mod.rs  posts.rs  profiles.rs  test_support.rs  tests.rs
rust/space/tests/: space.rs
rust/space/tests/support/: auth.rs  mod.rs  space.rs
rust/wall/: Cargo.toml
rust/wall/src/: client.rs  crypto.rs  error.rs  lib.rs  models.rs  transport.rs
(+1486 files in other folders)
