[workspace]
resolver = "2"
members = [
    "apps/cli",
    "apps/codegen",
    "apps/ensu/src-tauri",
    "bindings/frb/ente-rust",
    "bindings/frb/photos",
    "bindings/uniffi/cast",
    "bindings/uniffi/ensu",
    "bindings/wasm/ente-wasm",
    "bindings/wasm/core",
    "crates/accounts",
    "crates/contacts",
    "crates/core",
    "crates/ensu",
    "crates/image",
    "crates/photos",
    "crates/test-support",
    "e2e",
]

[workspace.dependencies]
ente-ensu = { path = "crates/ensu" }
ente-accounts = { path = "crates/accounts" }
ente-contacts = { path = "crates/contacts" }
ente-core = { path = "crates/core" }
ente-image = { path = "crates/image" }
ente-photos = { path = "crates/photos" }
ente-rs = { path = "apps/cli" }
ente-test-support = { path = "crates/test-support" }
# Single workspace-wide ORT pin. Member crates inherit this source and add
# their own feature sets; the [patch.crates-io] section below keeps transitive
# ORT users (notably transcribe-rs) on the same revision.
ort = { git = "https://github.com/pykeio/ort.git", rev = "31c8f1443bb579bfddb82705288347697e468fb3", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
uniffi = { version = "0.31.0" }
wasm-bindgen = "0.2.125"

# Keep transitive ORT users (notably transcribe-rs) on the same upstream
# revision as the workspace's direct ORT dependencies.
[patch.crates-io]
ort = { git = "https://github.com/pykeio/ort.git", rev = "31c8f1443bb579bfddb82705288347697e468fb3" }
