[project]
name = "ente-clean-ml"
version = "0.1.0"
description = "Python project for testing and running ML models for Ente"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.2",
    "onnxruntime>=1.19.2",
    "opencv-python>=4.10.0.84",
    "pillow-heif>=0.22.0",
    "pillow>=12.3.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["test"]
