[package]
name = "ente-space"
version = "0.0.1"
edition = "2024"

[dependencies]
ente-core.workspace = true
md-5 = "0.11"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
urlencoding = "2"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
mockito = "1.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
