[package]
name = "ente-wall"
version = "0.0.1"
edition = "2024"

[dependencies]
base64 = "0.22"
ente-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
urlencoding = "2"

[dev-dependencies]
mockito = "1.6"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
