[package]
name = "ente-accounts"
edition = "2024"

[dependencies]
ente-core = { workspace = true, features = ["srp"] }
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
base64 = "0.22"
uuid = { version = "1.11", features = ["js", "serde", "v4"] }
zeroize = { version = "1.8", features = ["derive"] }
urlencoding = "2.1"

[dev-dependencies]
mockito = "1.6"
sha2 = "0.11"
srp = { version = "0.7.0-rc.3", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
