[package]
name = "ente-accounts"
edition = "2024"

[features]
museum = []

[dependencies]
ente-core = { workspace = true, features = ["srp"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64 = "0.22"
uuid = { version = "1.11", features = ["js", "serde", "v4"] }
zeroize = { version = "1.8", features = ["derive"] }
urlencoding = "2.1"

[dev-dependencies]
ente-test-support.workspace = true
hmac = "0.13"
mockito = "1.6"
sha2 = "0.11"
sha1 = "0.11"
srp = { version = "0.7.0-rc.3", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
