[package]
name = "ente-contacts"
edition = "2024"

[features]
museum = []

[dependencies]
ente-core = { workspace = true, features = ["srp"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
md-5 = "0.11"
sha2 = "0.11"
uuid = { version = "1", features = ["v4", "js"] }

[dev-dependencies]
base64 = "0.22"
ente-accounts.workspace = true
ente-test-support.workspace = true
hmac = "0.13"
mockito = "1.6"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
sha1 = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
zeroize = { version = "1.8", features = ["derive"] }
