[package]
name = "ente-image"
edition = "2024"

[dependencies]
fast_image_resize = { version = "5.5.0", features = ["image"] }
image = { version = "0.25.10", default-features = true }
jxl-oxide = { version = "0.12.6", features = ["image"] }
kamadak-exif = "0.6.1"
ente_heic = { package = "heic_decoder", git = "https://github.com/ente/heic-decoder.git", rev = "2017f4ddaf91017483f6eb71500f520fba47391a", features = [
    "image-integration",
] }
moxcms = { version = "0.8.1", features = ["in_place"] }
thiserror.workspace = true
tiff = "0.10.3"
