[package]
name = "ente-model-download"
edition = "2024"

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["http2", "charset", "system-proxy", "rustls-tls-webpki-roots"] }
serde.workspace = true
serde_json = "1"
sha2 = "0.11"
thiserror.workspace = true
tokio = { version = "1", features = ["rt", "time"] }
