[package]
name = "ente-model-download"
edition = "2024"

[dependencies]
flate2 = "1.1.9"
futures-util = "0.3.32"
reqwest = { version = "0.12", default-features = false, features = ["http2", "charset", "system-proxy", "rustls-tls-webpki-roots"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11.0"
tar = "0.4.46"
thiserror.workspace = true
tokio = { version = "1", features = ["rt", "time"] }
