[package]
name = "ente-wasm"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ente-contacts.workspace = true
ente-core = { workspace = true, features = ["srp"] }
md-5 = "0.11"
js-sys = "0.3"
serde.workspace = true
serde-wasm-bindgen = "0.6"
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
